# dice

./: .gitignore  AUTHORS  CONTRIBUTING  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.am  README  README.md  args.h  build.sh  configure.ac  dice.1  dice.c  dice.h  interactive.c  interactive.h  io.c  io.h  parse.c  parse.h  roll-engine.c  roll-engine.h  util.c  util.h
docs/: grammar.txt
examples/: dice-test.sh  testing.dice  valgrind.sh
include/: Makefile.am  roll-engine.h
lib/: Makefile.am  parse.c  roll-engine.c  util.c
tests/: dice-test.sh  testing.dice  valgrind.sh
vim/ftdetect/: dice.vim
vim/syntax/: dice.vim
